# NextE

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  build-profile.json5  dev.sh  hvigorconfig.ts  oh-package.json5
.harness/: config.json
AppScope/: app.json5
changelog/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.1.3.md  v1.1.4.md  v1.1.5.md  v1.1.6.md  v1.1.7.md  v1.1.8.md  v1.1.9.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.2.3.md  v1.2.4.md
docs/: architecture.md  device-lease.md  eh-integration-contract.md  gap-backlog.md  loop.md  manga-translation-design.md  parity-audit.md  parity-driver.md  roadmap.md
entry/: build-profile.json5  oh-package.json5
scripts/: build_hvigor_signed.sh  build_manga_translator_ui_sidecar.sh  capture_grid_badge_crops.mjs  check_i18n_duplicates.py  dev.env.sample  dev_webdav_probe_server.mjs  device_lease.py  generate_system_symbol_catalog.mjs  harmony_capture_screen.mjs  launch_gallery_deeplink.sh  prepare_public_clipboard_build.py  qa_image_block_seeded_reader.mjs  run_ci_preflight.sh  sanitize_gallery_detail_fixture.mjs  sign.py  test_all_thumbnails_page_jump_contract.mjs  test_app_storage_v2_key_contract.mjs  test_basic_data_source_contract.mjs  test_cache_settings_contract.mjs  test_comic_artwork_recognizer_fixture.mjs  test_comment_language_gate_contract.mjs  test_comment_parser_contract.mjs  test_comment_score_details_contract.mjs  test_comment_translation_cache_clear_contract.mjs  (+178 more)
shared/src/main/cpp/: CMakeLists.txt  reader_super_resolution_napi.cpp  reader_super_resolution_shaders.h
(+726 files in other folders)
